samples/_failures_safe/1761210186_041679_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5106a44.c: In function ‘main’:
./samples/SAFE/__tmp_c5106a44.c:150:17: error: expected declaration or statement at end of input
  150 |                 return 1;
      |                 ^~~~~~
./samples/SAFE/__tmp_c5106a44.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5106a44.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5106a44.c:150:17: error: expected declaration or statement at end of input
